[gd_scene load_steps=4 format=3 uid="uid://d2o0nwvw0oxbo"]

[ext_resource type="Script" path="res://scripts/safe_minigame.gd" id="1_voi3s"]
[ext_resource type="Texture2D" uid="uid://cfuggtvmnr2d" path="res://assets/sprites/safe_scene_sprites/moving_bar.png" id="2_b1k3v"]
[ext_resource type="FontFile" uid="uid://dkkcghmt6x15g" path="res://assets/fonts/title_font.ttf" id="3_pim5v"]

[node name="safe_minigame" type="Node2D"]
script = ExtResource("1_voi3s")

[node name="background" type="AnimatedSprite2D" parent="."]

[node name="moving_bar" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(216.562, 14.25)
scale = Vector2(0.330078, 0.273438)
texture = ExtResource("2_b1k3v")

[node name="slot_1_bg" type="ColorRect" parent="." groups=["slots"]]
offset_right = 288.0
offset_bottom = 29.0
color = Color(0.219501, 0.219501, 0.219501, 1)

[node name="green" type="ColorRect" parent="slot_1_bg"]
z_index = 1
layout_mode = 0
offset_left = 199.0
offset_top = 6.0
offset_right = 239.0
offset_bottom = 23.0
color = Color(0, 1, 0, 1)

[node name="red" type="ColorRect" parent="slot_1_bg"]
layout_mode = 0
offset_left = 9.0
offset_top = 6.0
offset_right = 279.0
offset_bottom = 23.0
color = Color(1, 0, 0, 1)

[node name="countdown" type="Label" parent="."]
offset_left = 310.0
offset_top = 5.0
offset_right = 330.0
offset_bottom = 21.0
theme_override_fonts/font = ExtResource("3_pim5v")
text = "30"

[node name="countdown_timer" type="Timer" parent="countdown"]
autostart = true

[connection signal="timeout" from="countdown/countdown_timer" to="." method="_on_countdown"]
